--- a/about_us.html
+++ b/about_us.html
@@ -52,77 +52,79 @@
     </div>
 </header>
 
-<main class="contentbox contentbox--contact">
-    <div class="container">
-        <div class="header center">
-            <h1 class="header-title header-title--name"><span>O nas</span></h1>
+<main>
+    <article class="contentbox contentbox--contact">
+        <div class="container">
+            <div class="header center">
+                <h1 class="header-title header-title--name"><span>O nas</span></h1>
+            </div>
         </div>
-    </div>
-    <div class="container contentbox-main-hld">
-        <div class="row contentbox-main">
-            <div class="col contact-details">
-                <div class="header">
-                    <h3 class="header-title header-title--section"><span>Nasza misja</span></h3>
-                </div>
-                <div class="row">
-                    <div class="col data">
-                        <p>Koncentrujemy się na identyfikowaniu problemów praktyki zawodowej i biznesowej. Poszukujemy sprawdzonych rozwiązań, które oferujemy profesjonalistom. Rzetelna wiedza, atrakcyjna forma przekazu, narzędziowość proponowanych rozwiązań – to azymuty wyznaczające kierunki naszej aktywności. Nieustannie doskonalimy się, aby wspomagać rozwój naszych Klientów.</p>
+        <div class="container contentbox-main-hld">
+            <div class="row contentbox-main">
+                <div class="col contact-details">
+                    <div class="header">
+                        <h3 class="header-title header-title--section"><span>Nasza misja</span></h3>
                     </div>
-                    <div class="col-md-auto image">
-                        <img src="http://via.placeholder.com/398x64/ddd/000000" alt="" />
+                    <div class="row">
+                        <div class="col data">
+                            <p>Koncentrujemy się na identyfikowaniu problemów praktyki zawodowej i biznesowej. Poszukujemy sprawdzonych rozwiązań, które oferujemy profesjonalistom. Rzetelna wiedza, atrakcyjna forma przekazu, narzędziowość proponowanych rozwiązań – to azymuty wyznaczające kierunki naszej aktywności. Nieustannie doskonalimy się, aby wspomagać rozwój naszych Klientów.</p>
+                        </div>
+                        <div class="col-md-auto image">
+                            <img src="http://via.placeholder.com/398x64/ddd/000000" alt="" />
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </article>
+
+    <div class="areasactivity">
+        <div class="container">
+            <article class="row is-odd">
+                <div class="col-lg-6 data">
+                    <header class="header">
+                        <h2 class="header-title header-title--section"><a href="#"><span>Szkolenia otwarte</span></a></h2>
+                    </header>
+                    <p>Oferujemy dobrze zdefiniowane i zwarte formy szkoleniowe obejmujące swoją tematyką szeroko rozumiane <b>zagadnienia finansowe i podatkowe</b>, wspomagamy praktykę <b>zarządzania przedsiębiorstwem</b>, przedstawiamy rozwiązania problemów zawodowych, tłumaczymy <b>zawiłości prawa</b> z różnych obszarów. Szczególną wagę przywiązujemy do <b>kompetencji i praktycznych doświadczeń</b> współpracujących z nami trenerów i wykładowców.</p>
+                    <a href="courses_open.html" class="btn btn-primary">Aktualne szkolenia otwarte</a>
+                </div>
+                <figure class="col-lg-6 image">
+                    <a href="#">
+                        <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+                    </a>
+                </figure>
+            </article>
+            <article class="row is-even">
+                <div class="col-lg-6 data">
+                    <header class="header">
+                        <h2 class="header-title header-title--section"><a href="#"><span>Szkolenia zamknięte</span></a></h2>
+                    </header>
+                    <p>Nasz zespół proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> dedykowanych wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego kadr</b> zarządzających i pracowników.</p>
+                    <a href="#" class="btn btn-primary">Pobierz katalog szkoleń zamkniętych</a>
+                </div>
+                <figure class="col-lg-6 image">
+                    <a href="#">
+                        <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+                    </a>
+                </figure>
+            </article>
+            <article class="row is-odd">
+                <div class="col-lg-6 data">
+                    <header class="header">
+                        <h2 class="header-title header-title--section"><a href="#"><span>Wydawnictwo</span></a></h2>
+                    </header>
+                    <p>Rozwijamy program wydawniczy, który tak poprzez <b>media drukowane, jak i elektroniczne</b> ma wspierać i inspirować profesjonalistów. Obok znaczących pozycji z zakresu <b>literatury biznesowej</b> chcemy oferować także publikacje i <b>serwisy informacyjne</b> wspierające na co dzień ludzi podejmujących decyzje w przedsiębiorstwach i instytucjach publicznych.</p>
+                    <a href="courses_open.html" class="btn btn-primary">Zobacz publikacje</a>
+                </div>
+                <figure class="col-lg-6 image">
+                    <a href="#">
+                        <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+                    </a>
+                </figure>
+            </article>
+        </div>    
     </div>
 </main>
-
-<section class="areasactivity">
-    <div class="container">
-        <div class="row is-odd">
-            <div class="col-lg-6 data">
-                <div class="header">
-                    <h2 class="header-title header-title--section"><a href="#"><span>Szkolenia otwarte</span></a></h2>
-                </div>
-                <p>Oferujemy dobrze zdefiniowane i zwarte formy szkoleniowe obejmujące swoją tematyką szeroko rozumiane <b>zagadnienia finansowe i podatkowe</b>, wspomagamy praktykę <b>zarządzania przedsiębiorstwem</b>, przedstawiamy rozwiązania problemów zawodowych, tłumaczymy <b>zawiłości prawa</b> z różnych obszarów. Szczególną wagę przywiązujemy do <b>kompetencji i praktycznych doświadczeń</b> współpracujących z nami trenerów i wykładowców.</p>
-                <a href="courses_open.html" class="btn btn-primary">Aktualne szkolenia otwarte</a>
-            </div>
-            <div class="col-lg-6 image">
-                <a href="#">
-                    <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
-                </a>
-            </div>
-        </div>
-        <div class="row is-even">
-            <div class="col-lg-6 data">
-                <div class="header">
-                    <h2 class="header-title header-title--section"><a href="#"><span>Szkolenia zamknięte</span></a></h2>
-                </div>
-                <p>Nasz zespół proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> dedykowanych wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego kadr</b> zarządzających i pracowników.</p>
-                <a href="#" class="btn btn-primary">Pobierz katalog szkoleń zamkniętych</a>
-            </div>
-            <div class="col-lg-6 image">
-                <a href="#">
-                    <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
-                </a>
-            </div>
-        </div>
-        <div class="row is-odd">
-            <div class="col-lg-6 data">
-                <div class="header">
-                    <h2 class="header-title header-title--section"><a href="#"><span>Wydawnictwo</span></a></h2>
-                </div>
-                <p>Rozwijamy program wydawniczy, który tak poprzez <b>media drukowane, jak i elektroniczne</b> ma wspierać i inspirować profesjonalistów. Obok znaczących pozycji z zakresu <b>literatury biznesowej</b> chcemy oferować także publikacje i <b>serwisy informacyjne</b> wspierające na co dzień ludzi podejmujących decyzje w przedsiębiorstwach i instytucjach publicznych.</p>
-                <a href="courses_open.html" class="btn btn-primary">Zobacz publikacje</a>
-            </div>
-            <div class="col-lg-6 image">
-                <a href="#">
-                    <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
-                </a>
-            </div>
-        </div>
-    </div>    
-</section>
 
 <section class="insetbox">
     <div class="container">
@@ -147,9 +149,9 @@
 
 <section class="theytrusted">
     <div class="container">
-        <div class="header center">
+        <header class="header center">
             <h5 class="header-title header-title--name"><span>Zaufali nam</span></h5>
-        </div>
+        </header>
         <div class="row">
             <div class="col-12">
                 <ul class="js-slick-items slick-slider theytrusted-inner">
