--- a/contact.html
+++ b/contact.html
@@ -52,67 +52,69 @@
     </div>
 </header>
 
-<main class="contentbox contentbox--contact">
-    <div class="container">
-        <div class="header center">
-            <h1 class="header-title header-title--name"><span>Kontakt</span></h1>
+<main>
+    <article class="contentbox contentbox--contact">
+        <div class="container">
+            <header class="header center">
+                <h1 class="header-title header-title--name"><span>Kontakt</span></h1>
+            </header>
         </div>
-    </div>
-    <div class="container contentbox-main-hld">
-        <div class="row contentbox-main">
-            <div class="col contact-details">
-                <div class="header">
-                    <h2 class="header-title header-title--section"><span>Dane kontaktowe</span></h2>
-                </div>
-                <p><b>EXPLANATOR</b><br />
-                ul. Kościelna 30 lok. 59,<br />
-                60-538 Poznań<br />
-                NIP: 778-115-70-12<br />
-                REGON: 634548840</p>
+        <div class="container contentbox-main-hld">
+            <div class="row contentbox-main">
+                <div class="col contact-details">
+                    <div class="header">
+                        <h2 class="header-title header-title--section"><span>Dane kontaktowe</span></h2>
+                    </div>
+                    <p><b>EXPLANATOR</b><br />
+                    ul. Kościelna 30 lok. 59,<br />
+                    60-538 Poznań<br />
+                    NIP: 778-115-70-12<br />
+                    REGON: 634548840</p>
 
-                <p>tel. (61) 85 50 112 <br />
-                fax (61) 85 50 078<br />
-                GSM 570 975 799<br />
-                GSM 661 870 835<br />
-                <a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></p>
+                    <p>tel. (61) 85 50 112 <br />
+                    fax (61) 85 50 078<br />
+                    GSM 570 975 799<br />
+                    GSM 661 870 835<br />
+                    <a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></p>
 
-                <p>Jesteśmy do dyspozycji w godzinach 8-16 od poniedziałku do piątku.</p>
-                <p>Nr rejestru firm szkoleniowych <b>22102131</b></p>
-            </div>
-            <div class="col-md-auto contact-image">
-                <div class="contact-image-hld">
-                    <img src="http://via.placeholder.com/210x374/ffcffc/000000" alt="" />
+                    <p>Jesteśmy do dyspozycji w godzinach 8-16 od poniedziałku do piątku.</p>
+                    <p>Nr rejestru firm szkoleniowych <b>22102131</b></p>
                 </div>
-            </div>
-            <div class="col-lg-5 contact-form">
-                <div class="header">
-                    <h2 class="header-title header-title--section"><span>Formularz kontaktowy</span></h2>
+                <div class="col-md-auto contact-image">
+                    <div class="contact-image-hld">
+                        <img src="http://via.placeholder.com/210x374/ffcffc/000000" alt="" />
+                    </div>
                 </div>
-                <p>Zachęcamy do kontaktu z wykorzystaniem poniższego formularza. Zapraszamy do składania pytań, sugestii tematów szkoleń, propozycji współpracy.</p>
-                <form class="form form-register needs-validation" novalidate>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Imię i nazwisko" required>
-                        <div class="invalid-feedback">
-                            Pole jest wymagane.
-                        </div>
+                <div class="col-lg-5 contact-form">
+                    <div class="header">
+                        <h2 class="header-title header-title--section"><span>Formularz kontaktowy</span></h2>
                     </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" placeholder="E-mail" required>
-                        <div class="invalid-feedback">
-                            Pole jest wymagane.
+                    <p>Zachęcamy do kontaktu z wykorzystaniem poniższego formularza. Zapraszamy do składania pytań, sugestii tematów szkoleń, propozycji współpracy.</p>
+                    <form class="form form-register needs-validation" novalidate>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Imię i nazwisko" required>
+                            <div class="invalid-feedback">
+                                Pole jest wymagane.
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" placeholder="Wiadomość" required></textarea>
-                        <div class="invalid-feedback">
-                            Pole jest wymagane.
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="E-mail" required>
+                            <div class="invalid-feedback">
+                                Pole jest wymagane.
+                            </div>
                         </div>
-                    </div>
-                    <input type="submit" class="btn btn-primary btn-submit pull-right" value="Wyślij wiadomość">
-                </form>
+                        <div class="form-group">
+                            <textarea class="form-control" placeholder="Wiadomość" required></textarea>
+                            <div class="invalid-feedback">
+                                Pole jest wymagane.
+                            </div>
+                        </div>
+                        <input type="submit" class="btn btn-primary btn-submit pull-right" value="Wyślij wiadomość">
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
+    </article>
 </main>
 
 <section class="insetbox">
