--- a/courses_closed.html
+++ b/courses_closed.html
@@ -55,11 +55,11 @@
 </header>
 
 <main>
-    <div class="container">
-        <div class="header center">
+    <section class="container">
+        <header class="header center">
             <h1 class="header-title header-title--name"><span>Szkolenia zamknięte</span></h1>
-        </div>
-    </div>
+        </header>
+    </section>
 
     <div class="insetbox insetbox--admission">
         <div class="container">
@@ -74,18 +74,18 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
                     <a href="courses_closed_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_closed_details.html">Ocena okresowa pracowników</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Obecnie ocena pracownika staje się kompleksowym narzędziem zajmującym centralne miejsce w systemie zarządzania zasobami ludzkimi większości organizacji, w tym również polskich. Jej znaczenie jest szczególnie duże, ponieważ może być wykonywana praktycznie we wszystkich fazach, które składają się na proces kierowania pracownikami (od procesu planowania zasobów ludzkich, poprzez kierowanie karierą pracowników, aż po określanie strategii personalnej organizacji).</p>
@@ -100,19 +100,19 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
                     <a href="courses_closed_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_closed_details.html">Współpraca gospodarcza z partnerem zagranicznym</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Obecnie wiele krajów dysponuje  ciekawymi mozliwościami importowymi i eksportowymi dla polskich przedsiębiorców. Aby skutecznie wykorzystać potencjał zlokalizowany na rynkach zagranicznych zapraszamy do udziału w szkoleniach dotyczących m.in. współpracy gospodarczej z Chinami, Indiami, państwami Bliskiego Wschodu, Turcją czy Rosją.</p>
@@ -127,19 +127,19 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
                     <a href="courses_closed_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_closed_details.html">Ocena okresowa pracowników</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Obecnie ocena pracownika staje się kompleksowym narzędziem zajmującym centralne miejsce w systemie zarządzania zasobami ludzkimi większości organizacji, w tym również polskich. Jej znaczenie jest szczególnie duże, ponieważ może być wykonywana praktycznie we wszystkich fazach, które składają się na proces kierowania pracownikami (od procesu planowania zasobów ludzkich, poprzez kierowanie karierą pracowników, aż po określanie strategii personalnej organizacji).</p>
@@ -154,19 +154,19 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
                     <a href="courses_closed_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_closed_details.html">Współpraca gospodarcza z partnerem zagranicznym</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Obecnie wiele krajów dysponuje  ciekawymi mozliwościami importowymi i eksportowymi dla polskich przedsiębiorców. Aby skutecznie wykorzystać potencjał zlokalizowany na rynkach zagranicznych zapraszamy do udziału w szkoleniach dotyczących m.in. współpracy gospodarczej z Chinami, Indiami, państwami Bliskiego Wschodu, Turcją czy Rosją.</p>
@@ -181,19 +181,19 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
                     <a href="courses_closed_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_closed_details.html">Ocena okresowa pracowników</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Obecnie ocena pracownika staje się kompleksowym narzędziem zajmującym centralne miejsce w systemie zarządzania zasobami ludzkimi większości organizacji, w tym również polskich. Jej znaczenie jest szczególnie duże, ponieważ może być wykonywana praktycznie we wszystkich fazach, które składają się na proces kierowania pracownikami (od procesu planowania zasobów ludzkich, poprzez kierowanie karierą pracowników, aż po określanie strategii personalnej organizacji).</p>
@@ -208,7 +208,7 @@
 
                     </div>
                 </div>
-            </div>
+            </article>
             <div class="col-lg-12 listing-action">
                 <ul class="pagination">
                     <li class="prev"><a href="#"><i class="icon icon--arrow-left"></i> poprzednia strona</a></li>
