--- a/courses_open.html
+++ b/courses_open.html
@@ -55,15 +55,15 @@
 </header>
 
 <main>
-    <div class="container">
-        <div class="header center">
+    <section class="container">
+        <header class="header center">
             <h1 class="header-title header-title--name"><span>Szkolenia otwarte</span></h1>
-        </div>
-    </div>
+        </header>
+    </section>
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 itembox">
+            <article class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
                     <a href="courses_open_details.html">
@@ -71,10 +71,10 @@
                     </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
                         <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
@@ -89,19 +89,19 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">e-kurs mailowy</span>
                     <a href="courses_open_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Zinteresowanie pracodawców umowami cywilno-prawnymi nie słabnie. Jednakże z każdą formą elastycznego zatrudnienia związane są liczne ryzyka. Możliwości popełnienia błędu skutkującego znaczącymi konsekwencjami prawnymi i finansowymi jest wyjątkowo duże. Dodatkowo pojawia się liczne orzecznictwo, które ma konkretny wpływ na praktykę zatrudniania pracowników.</p>
@@ -129,19 +129,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
                     <a href="courses_open_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
                         <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
@@ -156,19 +156,19 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">e-kurs mailowy</span>
                     <a href="courses_open_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Zinteresowanie pracodawców umowami cywilno-prawnymi nie słabnie. Jednakże z każdą formą elastycznego zatrudnienia związane są liczne ryzyka. Możliwości popełnienia błędu skutkującego znaczącymi konsekwencjami prawnymi i finansowymi jest wyjątkowo duże. Dodatkowo pojawia się liczne orzecznictwo, które ma konkretny wpływ na praktykę zatrudniania pracowników.</p>
@@ -185,19 +185,19 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
                     <a href="courses_open_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
                         <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
@@ -212,7 +212,7 @@
 
                     </div>
                 </div>
-            </div>
+            </article>
             <div class="col-lg-12 listing-action">
                 <ul class="pagination">
                     <li class="prev"><a href="#"><i class="icon icon--arrow-left"></i> poprzednia strona</a></li>
