--- a/courses_register.html
+++ b/courses_register.html
@@ -52,29 +52,30 @@
     </div>
 </header>
 
-<main class="contentbox contentbox--register">
-    <div class="container">
-        <div class="header center">
-            <h1 class="header-title header-title--name"><span>Formularz zgłoszeniowy</span></h1>
+<main>
+    <article class="contentbox contentbox--register">
+        <div class="container">
+            <header class="header center">
+                <h1 class="header-title header-title--name"><span>Formularz zgłoszeniowy</span></h1>
+            </header>
         </div>
-    </div>
-    <div class="container contentbox-main-hld">
-        <div class="row">
-            <div class="col-lg-12 contentbox-header">
-                <p>Niniejszym zgłaszamy udział następujących osób w szkoleniu</p>
-                <div class="contentbox-title-hld">
-                    <h2 class="title title--form">5. Forum Nowoczesnego Controllingu</h2>
-                    <h3 class="subtitle subtitle--form">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
-                </div>
-                <div class="event-details event-details--form">
-                    <p class="city"><i class="icon icon--calendar"></i> Warszawa, 24-25.10.2019</p>
-                    <p class="location"><i class="icon icon--location"></i> Hotel LORD, Al. Krakowska 218 Warszawa - Okęcie</p>
-                </div>
+        <section class="container contentbox-main-hld">
+            <div class="row">
+                <header class="col-lg-12 contentbox-header">
+                    <p>Niniejszym zgłaszamy udział następujących osób w szkoleniu</p>
+                    <hgroup class="contentbox-title-hld">
+                        <h2 class="title title--form">5. Forum Nowoczesnego Controllingu</h2>
+                        <h3 class="subtitle subtitle--form">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+                    </hgroup>
+                    <div class="event-details event-details--form">
+                        <p class="city"><i class="icon icon--calendar"></i> Warszawa, 24-25.10.2019</p>
+                        <p class="location"><i class="icon icon--location"></i> Hotel LORD, Al. Krakowska 218 Warszawa - Okęcie</p>
+                    </div>
+                </header>
             </div>
-        </div>
-        <div class="row contentbox-main">
-            <div class="col-lg-12">
-                <form class="form form-register needs-validation" novalidate>
+            <div class="row contentbox-main">
+                <div class="col-lg-12">
+                    <form class="form form-register needs-validation" novalidate>
                         <h4 class="header-title header-title--content"><span>Uczestnicy szkolenia</span></h4>
                         <div class="form-inline mb-3 mr-sm-3">
                             <label class="col-form-label">Okreś liczbę uczestników:</label>
@@ -237,10 +238,11 @@
                         </div>
                         <p><span class="required">*</span> Pola oznaczone gwiazdką są wymagane.</p>
                         <input type="submit" class="btn btn-primary btn-submit pull-right" value="Wyślij zgłoszenie">
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
+    </article>
 </main>
 
 <footer class="footersite">
@@ -301,7 +303,6 @@
         </div>
     </div>
 </footer>
-
 
 <script src="js/site.js"></script>
 <script src="vendor/slick/slick.min.js"></script>
