--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 <ul class="js-slick-items slick-slider promotional-slider-inner">
                     <li class="item">
                         <a href="courses_open_details.html">
-                            <div class="item-image">
+                            <figure class="item-image">
                                 <img src="http://via.placeholder.com/1200x900/333/000000?text=1-1200x900" alt="" />
-                            </div>
+                            </figure>
                             <div class="col-8 item-data">
                                 <h2 class="item-title">5. Forum Nowoczesnego Controllinguy</h2>
                                 <p class="item-time">Warszawa, 24-25.10.2019</p>
@@ -71,9 +71,9 @@
                     </li>
                     <li class="item">
                         <a href="courses_open_details.html">
-                            <div class="item-image">
+                            <figure class="item-image">
                                 <img src="http://via.placeholder.com/1200x900/DDD/000000?text=2-1200x900" alt="" />
-                            </div>
+                            </figure>
                             <div class="col-8 item-data">
                                 <h2 class="item-title">Storytelling jako skuteczne narzędzie sprzedażowe</h2>
                                 <p class="item-time">Poznań, 27.09.2019</p>
@@ -83,9 +83,9 @@
                     </li>
                     <li class="item">
                         <a href="courses_open_details.html">
-                            <div class="item-image">
+                            <figure class="item-image">
                                 <img src="http://via.placeholder.com/1200x900/ccc/000000?text=3-1200x900" alt="" />
-                            </div>
+                            </figure>
                             <div class="col-8 item-data">
                                 <h2 class="item-title">6. Forum Szefów Sprzedaży</h2>
                                 <p class="item-time">Warszawa, 21-22.11.2019</p>
@@ -111,37 +111,37 @@
                     });
                 });
             </script>
-            <div class="promotional-text col-5">
+            <section class="promotional-text col-5">
                 <div class="col-md-8 col-lg-9 col-xl-7">
-                    <div class="header">
+                    <header class="header">
                         <h2 class="header-title header-title--promotional"><span><a href="courses_closed.html">Szkolenia zamknięte</a></span></h2>
-                    </div>
+                    </header>
                     <p>Explanator proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> „in company” wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego</b> kadr zarządzających i pracowników.</p>
                     <a href="#" class="btn btn-primary pull-right">Zobacz więcej</a>
                 </div>
-            </div>
+            </section>
         </div>
     </div>
 </section>
 
 <main>
-    <div class="container">
+    <section class="container">
         <div class="header center">
             <h1 class="header-title header-title--name"><span>Polecane szkolenia</span></h1>
         </div>
         <div class="row">
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
                     <a href="courses_open_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
                         <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
@@ -156,19 +156,19 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">e-kurs mailowy</span>
                     <a href="courses_open_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Zinteresowanie pracodawców umowami cywilno-prawnymi nie słabnie. Jednakże z każdą formą elastycznego zatrudnienia związane są liczne ryzyka. Możliwości popełnienia błędu skutkującego znaczącymi konsekwencjami prawnymi i finansowymi jest wyjątkowo duże. Dodatkowo pojawia się liczne orzecznictwo, które ma konkretny wpływ na praktykę zatrudniania pracowników.</p>
@@ -185,16 +185,16 @@
 
                     </div>
                 </div>
-            </div>
+            </article>
         </div>
-    </div>
+    </section>
 </main>
 
 <section class="insetbox">
     <div class="container">
-        <div class="header">
+        <header class="header">
             <h6 class="header-title header-title--simple">Zapisz się do newslettera</h6>
-        </div>
+        </header>
         <div class="row">
             <div class="col-7">
                 <p>Niezawodna informacja na temat wydarzeń branżowych, nowych publikacji i aktualizacji serwisu</p>
@@ -211,104 +211,102 @@
     </div>
 </section>
 
-<section>
-    <div class="container">
-        <div class="header center">
-            <h5 class="header-title header-title--name"><span>Zobacz również</span></h5>
-        </div>
-        <div class="row">
-            <div class="col-lg-6 itembox">
-                <div class="col-lg-4 itembox-image-hld">
-                    <span class="label label-itembox">forum</span>
-                    <a href="courses_open_details.html">
-                        <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
-                    </a>
-                </div>
-                <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
-                        <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
-                        <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+<section class="container">
+    <header class="header center">
+        <h5 class="header-title header-title--name"><span>Zobacz również</span></h5>
+    </header>
+    <div class="row">
+        <article class="col-lg-6 itembox">
+            <figure class="col-lg-4 itembox-image-hld">
+                <span class="label label-itembox">forum</span>
+                <a href="courses_open_details.html">
+                    <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
+                </a>
+            </figure>
+            <div class="col-lg-8 itembox-data">
+                <header class="itembox-header">
+                    <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
+                    <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+                </header>
+                <div class="itembox-body">
+                    <div class="itembox-action">
+                        <p>Wykładowcy: Zespół ekspertów</p>
+                        <a href="courses_open_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
                     </div>
-                    <div class="itembox-body">
-                        <div class="itembox-action">
-                            <p>Wykładowcy: Zespół ekspertów</p>
-                            <a href="courses_open_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
-                        </div>
 
-                    </div>
                 </div>
             </div>
-            <div class="col-lg-6 itembox">
-                <div class="col-lg-4 itembox-image-hld">
-                    <span class="label label-itembox">e-kurs mailowy</span>
-                    <a href="courses_open_details.html">
-                        <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
-                    </a>
-                </div>
-                <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
-                        <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
-                        <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
+        </article>
+        <article class="col-lg-6 itembox">
+            <figure class="col-lg-4 itembox-image-hld">
+                <span class="label label-itembox">e-kurs mailowy</span>
+                <a href="courses_open_details.html">
+                    <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
+                </a>
+            </figure>
+            <div class="col-lg-8 itembox-data">
+                <header class="itembox-header">
+                    <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
+                    <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
+                </header>
+                <div class="itembox-body">
+                    <div class="itembox-action">
+                        <p>Wykładowcy: Zespół ekspertów</p>
+                        <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                     </div>
-                    <div class="itembox-body">
-                        <div class="itembox-action">
-                            <p>Wykładowcy: Zespół ekspertów</p>
-                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
-                        </div>
 
-                    </div>
                 </div>
             </div>
-            <div class="col-lg-6 itembox">
-                <div class="col-lg-4 itembox-image-hld">
-                    <span class="label label-itembox">forum</span>
-                    <a href="courses_open_details.html">
-                        <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
-                    </a>
-                </div>
-                <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
-                        <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
-                        <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+        </article>
+        <article class="col-lg-6 itembox">
+            <figure class="col-lg-4 itembox-image-hld">
+                <span class="label label-itembox">forum</span>
+                <a href="courses_open_details.html">
+                    <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
+                </a>
+            </figure>
+            <div class="col-lg-8 itembox-data">
+                <header class="itembox-header">
+                    <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
+                    <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+                </header>
+                <div class="itembox-body">
+                    <div class="itembox-action">
+                        <p>Wykładowcy: Zespół ekspertów</p>
+                        <a href="courses_open_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
                     </div>
-                    <div class="itembox-body">
-                        <div class="itembox-action">
-                            <p>Wykładowcy: Zespół ekspertów</p>
-                            <a href="courses_open_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
-                        </div>
 
+                </div>
+            </div>
+        </article>
+        <article class="col-lg-6 itembox">
+            <figure class="col-lg-4 itembox-image-hld">
+                <span class="label label-itembox">e-kurs mailowy</span>
+                <a href="courses_open_details.html">
+                    <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
+                </a>
+            </figure>
+            <div class="col-lg-8 itembox-data">
+                <header class="itembox-header">
+                    <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
+                    <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
+                </header>
+                <div class="itembox-body">
+                    <div class="itembox-action">
+                        <p>Wykładowcy: Zespół ekspertów</p>
+                        <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 itembox">
-                <div class="col-lg-4 itembox-image-hld">
-                    <span class="label label-itembox">e-kurs mailowy</span>
-                    <a href="courses_details.html">
-                        <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
-                    </a>
-                </div>
-                <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
-                        <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
-                        <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
-                    </div>
-                    <div class="itembox-body">
-                        <div class="itembox-action">
-                            <p>Wykładowcy: Zespół ekspertów</p>
-                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        </article>
     </div>
 </section>
 
 <section class="theytrusted">
     <div class="container">
-        <div class="header center">
+        <header class="header center">
             <h5 class="header-title header-title--name"><span>Zaufali nam</span></h5>
-        </div>
+        </header>
         <div class="row">
             <div class="col-12">
                 <ul class="js-slick-items slick-slider theytrusted-inner">
@@ -339,9 +337,9 @@
 
 <section class="insetbox">
     <div class="container">
-        <div class="header">
+        <header class="header">
             <h6 class="header-title header-title--simple">Zostań wykładowcą</h6>
-        </div>
+        </header>
         <div class="row">
             <div class="col">
                 <a href="contact.html" class="btn btn-primary btn-primary--white pull-right">Kontakt</a>
