--- a/publications.html
+++ b/publications.html
@@ -55,26 +55,26 @@
 </header>
 
 <main>
-    <div class="container">
-        <div class="header center">
+    <section class="container">
+        <header class="header center">
             <h1 class="header-title header-title--name"><span>Publikacje</span></h1>
-        </div>
-    </div>
+        </header>
+    </section>
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">książka</span>
                     <a href="publications_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="publications_details.html">Kurs wiedzy o winie</a></h2>
                         <h3 class="itembox-header-subtitle">Windows of the World, 4. wydanie polskie. zaktualizowane i rozszerzone</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Z końcem października 2019 roku ukaże się 4. wydanie legendarnej książki Kevina Zraly'ego "Kurs wiedzy o winie". Książka będzie dostępna WYŁĄCZNIE w sprzedaży wysyłkowej! W porównaniu do niedostępnych już wcześniejszych wydań tej książki jej objętość wzrosła do 450 stron, a dodatkowo doszły nowe rozdziały, w tym część poświęcona winom polskim autorstwa Wojciecha Bońkowskiego.</p>
@@ -88,19 +88,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">aktualizowany poradnik wymiennokartkowy</span>
                     <a href="publications_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="publications_details.html">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Ta unikalna, zwarta publikacja stanowi kompendium wiedzy, którą każdy menadżer powinien posiadać w zasięgu ręki. Klarowny podział publikacji pozwala na przyjazną nawigację po zagadnieniach związanych z regulacjami Kodeksu spółek handlowych. Dodatkowo, w uporządkowany sposób przedstawiane są kluczowe aspekty odpowiedzialności prawnej kadry zarządzającej.</p>
@@ -114,19 +114,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">aktualizowany poradnik wymiennokartkowy</span>
                     <a href="publications_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="publications_details.html">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Ta unikalna, zwarta publikacja stanowi kompendium wiedzy, którą każdy menadżer powinien posiadać w zasięgu ręki. Klarowny podział publikacji pozwala na przyjazną nawigację po zagadnieniach związanych z regulacjami Kodeksu spółek handlowych. Dodatkowo, w uporządkowany sposób przedstawiane są kluczowe aspekty odpowiedzialności prawnej kadry zarządzającej.</p>
@@ -140,18 +140,18 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">czasopismo specjalistyczne</span>
                     <a href="publications_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="publications_details.html">Magazynowanie i Produkcja</a></h2>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Magazynowanie i Produkcja to nowe czasopismo, które podejmuje problematykę magazynowania, produkcji, controllingu i logistyki. Przekazujemy kompleksową wiedzę i rozwiązania stosowane w najlepszych firmach w kraju i za granicą.</p>
@@ -166,19 +166,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
+            </article>
+            <article class="col-lg-12 itembox">
+                <figure class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">czasopismo specjalistyczne</span>
                     <a href="publications_details.html">
                         <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                     </a>
-                </div>
+                </figure>
                 <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
+                    <header class="itembox-header">
                         <h2 class="itembox-header-title"><a href="publications_details.html">Sell it in English</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h3>
-                    </div>
+                    </header>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Kwartalnik skierowany do handlowców, którzy chcieliby poprawić swoją znajomość biznesowego języka angielskiego oraz osiągać coraz lepsze wyniki.</p>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
             <div class="col-lg-12 listing-action">
                 <ul class="pagination">
                     <li class="prev"><a href="#"><i class="icon icon--arrow-left"></i> poprzednia strona</a></li>
