--- a/publications_details.html
+++ b/publications_details.html
@@ -52,136 +52,138 @@
     </div>
 </header>
 
-<main class="contentbox contentbox--details">
-    <header class="contentbox-header-hld">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 col-lg-4 contentbox-image-hld">
-                    <span class="label label-itembox">aktualizowany poradnik wymiennokartkowy</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
-                </div>
-                <div class="col-sm-8 col-lg-8 contentbox-header">
-                    <div class="contentbox-title-hld">
-                        <h1 class="title"><a href="#">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</a></h1>
-                        <h2 class="subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h2>
-                    </div>
+<main>
+    <article class="contentbox contentbox--details">
+        <div class="contentbox-header-hld">
+            <div class="container">
+                <div class="row">
+                    <figure class="col-sm-4 col-lg-4 contentbox-image-hld">
+                        <span class="label label-itembox">aktualizowany poradnik wymiennokartkowy</span>
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </figure>
+                    <header class="col-sm-8 col-lg-8 contentbox-header">
+                        <div class="contentbox-title-hld">
+                            <h1 class="title"><a href="#">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</a></h1>
+                            <h2 class="subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h2>
+                        </div>
+                    </header>
                 </div>
             </div>
         </div>
-    </header>
-    <div class="container contentbox-main-hld">
-        <div class="row contentbox-main">
-            <div class="col-lg-9 contentbox-action contentbox-action--top">
-                <div class="popup-inline js-popup-hide">
-                    <div class="close-hld js-popup-close">
-                        <i class="icon icon--close"></i>
+        <div class="container contentbox-main-hld">
+            <div class="row contentbox-main">
+                <div class="col-lg-9 contentbox-action contentbox-action--top">
+                    <div class="popup-inline js-popup-hide">
+                        <div class="close-hld js-popup-close">
+                            <i class="icon icon--close"></i>
+                        </div>
+                        <div class="header center">
+                            <h4 class="header-title header-title--section"><span>Formularz zamówienia</span></h4>
+                        </div>
+                        <p>Proszę, określić sposób zamówienia:</p>
+                        <a href="#" class="btn btn-primary">Formularz przesłany FAXem</a>
+                        <a href="courses_register.html" class="btn btn-primary">Formularz wypełniany on-line</a>
                     </div>
-                    <div class="header center">
-                        <h4 class="header-title header-title--section"><span>Formularz zamówienia</span></h4>
+                    <div class="col-lg-5 price-hld">
+                        <p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
+                        <p>(+ koszty wysyłki 25,20 zł brutto, wysyłka kurierem)</p>
                     </div>
-                    <p>Proszę, określić sposób zamówienia:</p>
-                    <a href="#" class="btn btn-primary">Formularz przesłany FAXem</a>
-                    <a href="courses_register.html" class="btn btn-primary">Formularz wypełniany on-line</a>
+                    <span class="btn btn-primary js-popup-show">Zamów</span>
+                    <ul class="list list--social">
+                        <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                        <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                        <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                        <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                        <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                    </ul>
                 </div>
-                <div class="col-lg-5 price-hld">
-                    <p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
-                    <p>(+ koszty wysyłki 25,20 zł brutto, wysyłka kurierem)</p>
+                <div class="col-lg-8">
+                    <h3 class="header-title header-title--content"><span>Opis</span></h3>
+                    <p>Ta unikalna, zwarta publikacja stanowi kompendium wiedzy, którą każdy menadżer powinien posiadać w zasięgu ręki. Klarowny podział publikacji pozwala na przyjazną nawigację po zagadnieniach związanych z regulacjami Kodeksu spółek handlowych. Dodatkowo, w uporządkowany sposób przedstawiane są kluczowe aspekty odpowiedzialności prawnej kadry zarządzającej.</p>
+                    <p>Pierwsza część poradnika zawiera kwintesencję wiedzy na temat:</p>
+                    <ul>
+                        <li>spółki z ograniczoną odpowiedzialnością</li>
+                        <li>spółki akcyjnej</li>
+                        <li>spółki jawnej</li>
+                        <li>spółki partnerskiej</li>
+                        <li>spółki komandytowej</li>
+                        <li>spółki komandytowo-akcyjnej</li>
+                    </ul>
+                    <p>Wszystkie zagadnienia prezentowane są w sposób, który pomija skomplikowane i rzadkie w praktyce gospodarczej niuanse prawne. Publikacja koncentruje się na wziętych z życia wydarzeniach gospodarczych takich jak między innymi:</p>
+                    <ul>
+                        <li>umowy z członkami kadry zarządzającej</li>
+                        <li>przekształcanie działalności gospodarczej w spółkę prawa handlowego</li>
+                        <li>tworzenie, łączenie, podział, likwidacja spółek</li>
+                    </ul>
+                    <p>Druga część poradnika koncentruje się na zagadnieniach odpowiedzialności prawnej kadry zarządzającej. Łatwo będzie odszukać istotne dla Czytelnika fragmenty dzięki <strong>przejrzystemu układowi publikacji</strong>, która zawiera między innymi:</p>
+                    <ul>
+                        <li>Odpowiedzialność cywilna i karna</li>
+                        <li>Odpowiedzialność kontraktowa i za zobowiązania przedsiębiorstwa</li>
+                        <li>Odpowiedzialność za prowadzenie ksiąg rachunkowych</li>
+                        <li>Odpowiedzialność z tytułu prawa pracy</li>
+                        <li>Odpowiedzialność za produkt</li>
+                        <li>Zarządzający spółkami prawa handlowego wobec organów kontrolnych (kontrola skarbowa, inspekcja handlowa, inspekcja pracy, UOKiK, GIODO i inne)</li>
+                    </ul>
+                    <p>Publikacja jest regularnie aktualizowana. Oznacza to, że co 3-4 miesiące otrzymywać będą Państwo osobno płatne istotne uzupełnienia i rozwinięcia tematów z zakresu poradnika.</p>
+                    <p>Dzięki przyjaznej formie poradnika w wersji elektronicznej dostępnej on-line można:</p>
+                    <ul>
+                        <li>przeglądać publikację na ekranie urządzenia stacjonarnego lub tabletu</li>
+                        <li>przeszukiwać tekst poradnika</li>
+                        <li>zaznaczać dowolną ilość fragmentów (zakładki) i opatrywać je własnymi komentarzami</li>
+                        <li>drukować strony lub dokumenty</li>
+                    </ul>
+                    <h3 class="header-title header-title--content"><span>Partnerzy</span></h3>
+                    <ul class="list list--partners">
+                        <li class="list-item"><img src="http://via.placeholder.com/250x65/ffcffc/000000?text=1" alt="" /></li>
+                        <li class="list-item"><img src="http://via.placeholder.com/250x25/ffcccc/000000?text=2" alt="" /></li>
+                        <li class="list-item"><img src="http://via.placeholder.com/250x65/cccffc/000000?text=3" alt="" /></li>
+                        <li class="list-item"><img src="http://via.placeholder.com/250x65/ffccfc/000000?text=4" alt="" /></li>
+                        <li class="list-item"><img src="http://via.placeholder.com/250x55/ffcccc/000000?text=5" alt="" /></li>
+                        <li class="list-item"><img src="http://via.placeholder.com/250x65/cffffc/000000?text=6" alt="" /></li>
+                    </ul>
                 </div>
-                <span class="btn btn-primary js-popup-show">Zamów</span>
-                <ul class="list list--social">
-                    <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-                    <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-                    <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-                    <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-                    <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-                </ul>
-            </div>
-            <div class="col-lg-8">
-                <h3 class="header-title header-title--content"><span>Opis</span></h3>
-                <p>Ta unikalna, zwarta publikacja stanowi kompendium wiedzy, którą każdy menadżer powinien posiadać w zasięgu ręki. Klarowny podział publikacji pozwala na przyjazną nawigację po zagadnieniach związanych z regulacjami Kodeksu spółek handlowych. Dodatkowo, w uporządkowany sposób przedstawiane są kluczowe aspekty odpowiedzialności prawnej kadry zarządzającej.</p>
-                <p>Pierwsza część poradnika zawiera kwintesencję wiedzy na temat:</p>
-                <ul>
-                    <li>spółki z ograniczoną odpowiedzialnością</li>
-                    <li>spółki akcyjnej</li>
-                    <li>spółki jawnej</li>
-                    <li>spółki partnerskiej</li>
-                    <li>spółki komandytowej</li>
-                    <li>spółki komandytowo-akcyjnej</li>
-                </ul>
-                <p>Wszystkie zagadnienia prezentowane są w sposób, który pomija skomplikowane i rzadkie w praktyce gospodarczej niuanse prawne. Publikacja koncentruje się na wziętych z życia wydarzeniach gospodarczych takich jak między innymi:</p>
-                <ul>
-                    <li>umowy z członkami kadry zarządzającej</li>
-                    <li>przekształcanie działalności gospodarczej w spółkę prawa handlowego</li>
-                    <li>tworzenie, łączenie, podział, likwidacja spółek</li>
-                </ul>
-                <p>Druga część poradnika koncentruje się na zagadnieniach odpowiedzialności prawnej kadry zarządzającej. Łatwo będzie odszukać istotne dla Czytelnika fragmenty dzięki <strong>przejrzystemu układowi publikacji</strong>, która zawiera między innymi:</p>
-                <ul>
-                    <li>Odpowiedzialność cywilna i karna</li>
-                    <li>Odpowiedzialność kontraktowa i za zobowiązania przedsiębiorstwa</li>
-                    <li>Odpowiedzialność za prowadzenie ksiąg rachunkowych</li>
-                    <li>Odpowiedzialność z tytułu prawa pracy</li>
-                    <li>Odpowiedzialność za produkt</li>
-                    <li>Zarządzający spółkami prawa handlowego wobec organów kontrolnych (kontrola skarbowa, inspekcja handlowa, inspekcja pracy, UOKiK, GIODO i inne)</li>
-                </ul>
-                <p>Publikacja jest regularnie aktualizowana. Oznacza to, że co 3-4 miesiące otrzymywać będą Państwo osobno płatne istotne uzupełnienia i rozwinięcia tematów z zakresu poradnika.</p>
-                <p>Dzięki przyjaznej formie poradnika w wersji elektronicznej dostępnej on-line można:</p>
-                <ul>
-                    <li>przeglądać publikację na ekranie urządzenia stacjonarnego lub tabletu</li>
-                    <li>przeszukiwać tekst poradnika</li>
-                    <li>zaznaczać dowolną ilość fragmentów (zakładki) i opatrywać je własnymi komentarzami</li>
-                    <li>drukować strony lub dokumenty</li>
-                </ul>
-                <h3 class="header-title header-title--content"><span>Partnerzy</span></h3>
-                <ul class="list list--partners">
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/ffcffc/000000?text=1" alt="" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x25/ffcccc/000000?text=2" alt="" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/cccffc/000000?text=3" alt="" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/ffccfc/000000?text=4" alt="" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x55/ffcccc/000000?text=5" alt="" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/cffffc/000000?text=6" alt="" /></li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <h3 class="header-title header-title--content"><span>Informacje techniczne</span></h3>
-                <p>ISBN: 978-83-931703-6-4</p>
-                <p>Format: A5, segregator</p>
-                <p>Objętość: około 1300 stron</p>
-                <h3 class="header-title header-title--content"><span>Materiały do pobrania</span></h3>
-                <ul class="list list--file">
-                    <li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH i odpowiedzialność prawna info z kuponem.pdf</a></li>
-                    <li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH i odpowiedzialność prawna SPIS TREŚCI.pdf</a></li>
-                </ul>
-                <h3 class="header-title header-title--content"><span>Autor</span></h3>
-                <p>Zespół autorów</p>
-                <p>Z poradnikiem współpracują liczni praktycy życia gospodarczego, specjaliści w swoich dziedzinach, prawnicy doskonale osadzeni w realiach gospodarczych.</p>
-            </div>
-            <div class="col-lg-12 contentbox-action contentbox-action--bottom">
-                <div class="popup-inline js-popup-hide">
-                    <div class="close-hld js-popup-close">
-                        <i class="icon icon--close"></i>
+                <div class="col-lg-4">
+                    <h3 class="header-title header-title--content"><span>Informacje techniczne</span></h3>
+                    <p>ISBN: 978-83-931703-6-4</p>
+                    <p>Format: A5, segregator</p>
+                    <p>Objętość: około 1300 stron</p>
+                    <h3 class="header-title header-title--content"><span>Materiały do pobrania</span></h3>
+                    <ul class="list list--file">
+                        <li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH i odpowiedzialność prawna info z kuponem.pdf</a></li>
+                        <li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH i odpowiedzialność prawna SPIS TREŚCI.pdf</a></li>
+                    </ul>
+                    <h3 class="header-title header-title--content"><span>Autor</span></h3>
+                    <p>Zespół autorów</p>
+                    <p>Z poradnikiem współpracują liczni praktycy życia gospodarczego, specjaliści w swoich dziedzinach, prawnicy doskonale osadzeni w realiach gospodarczych.</p>
+                </div>
+                <div class="col-lg-12 contentbox-action contentbox-action--bottom">
+                    <div class="popup-inline js-popup-hide">
+                        <div class="close-hld js-popup-close">
+                            <i class="icon icon--close"></i>
+                        </div>
+                        <div class="header center">
+                            <h4 class="header-title header-title--section"><span>Formularz zamówienia</span></h4>
+                        </div>
+                        <p>Proszę, określić sposób zamówienia:</p>
+                        <a href="#" class="btn btn-primary">Formularz przesłany FAXem</a>
+                        <a href="courses_register.html" class="btn btn-primary">Formularz wypełniany on-line</a>
                     </div>
-                    <div class="header center">
-                        <h4 class="header-title header-title--section"><span>Formularz zamówienia</span></h4>
+                    <div class="col-lg-5 price-hld">
+                        <p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
+                        <p>(+ koszty wysyłki 25,20 zł brutto, wysyłka kurierem)</p>
                     </div>
-                    <p>Proszę, określić sposób zamówienia:</p>
-                    <a href="#" class="btn btn-primary">Formularz przesłany FAXem</a>
-                    <a href="courses_register.html" class="btn btn-primary">Formularz wypełniany on-line</a>
+                    <span class="btn btn-primary js-popup-show">Zamów</span>
+                    <ul class="list list--social">
+                        <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                        <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                        <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                        <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                        <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                    </ul>
                 </div>
-                <div class="col-lg-5 price-hld">
-                    <p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
-                    <p>(+ koszty wysyłki 25,20 zł brutto, wysyłka kurierem)</p>
-                </div>
-                <span class="btn btn-primary js-popup-show">Zamów</span>
-                <ul class="list list--social">
-                    <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-                    <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-                    <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-                    <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-                    <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-                </ul>
             </div>
         </div>
-    </div>
+    </article>
 </main>
 
 <footer class="footersite">
