--- a/courses_closed_details.html
+++ b/courses_closed_details.html
@@ -52,106 +52,108 @@
     </div>
 </header>
 
-<main class="contentbox contentbox--details">
-    <header class="contentbox-header-hld">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 col-lg-4 contentbox-image-hld">
-                    <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
-                </div>
-                <div class="col-sm-8 col-lg-8 contentbox-header">
-                    <div class="contentbox-title-hld">
-                        <h1 class="title"><a href="#">Ocena okresowa pracowników</a></h1>
-                        <h2 class="subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h2>
-                    </div>
-                    <div class="event-details">
-                        <p class="location"><i class="icon icon--location"></i>Szkolenie dostępne w formule zamkniętej w siedzibie zleceniodawcy</p>
-                    </div>
+<main>
+    <article class="contentbox contentbox--details">
+        <div class="contentbox-header-hld">
+            <div class="container">
+                <div class="row">
+                    <figure class="col-sm-4 col-lg-4 contentbox-image-hld">
+                        <span class="label label-itembox">szkolenie zamknięte</span>
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </figure>
+                    <header class="col-sm-8 col-lg-8 contentbox-header">
+                        <div class="contentbox-title-hld">
+                            <h1 class="title"><a href="#">Ocena okresowa pracowników</a></h1>
+                            <h2 class="subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h2>
+                        </div>
+                        <div class="event-details">
+                            <p class="location"><i class="icon icon--location"></i>Szkolenie dostępne w formule zamkniętej w siedzibie zleceniodawcy</p>
+                        </div>
+                    </header>
                 </div>
             </div>
         </div>
-    </header>
-    <div class="container contentbox-main-hld">
-        <div class="row contentbox-main">
-            <div class="col-lg-9 contentbox-action contentbox-action--top">
-                <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
-                <ul class="list list--social">
-                    <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-                    <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-                    <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-                    <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-                    <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-                </ul>
-            </div>
-            <div class="col-lg-8">
-                <h3 class="header-title header-title--content"><span>Opis</span></h3>
-                <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkan temacie zwiększania skuteczności służb controllingowych i ich wpływu na rentowność przedsiębiorstw.</p>
-                <p><b>Podczas dwóch dni konferencyjnych, dkryją i poznają odpowiedzi na pytania:</b></p>
-                <ul>
-                    <li>Kiedy strategia optymalizacji kosztów staje się barierą wzrostu?</li>
-                    <li>Jak identyfikować procesy bieżące do natychmiastowej optymalizacji?</li>
-                    <li>Jak optymalizować organizację czasu pracy i ograniczyć nadgodziny?</li>
-                    <li>Jak innym udało się utrzymać płynność i nie pogorszyć rentowności?</li>
-                    <li>Jak optymalizować podatki już na etapie projektowania procesów w firmach?</li>
-                    <li>Czy automatyzacja i robotyzacja to strategia dla każdego przedsiębiorstwa?</li>
-                </ul>
-                <h3 class="header-title header-title--content"><span>Zawartość</span></h3>
-                <p><b>Dzień 1: Rentowność w ryzach,, czyli nawiguj w najlepszym kierunku</b></p>
-                <ol>
-                    <li>Jak realizować projekty optymalizacji kosztowej, aby nabrać wiatru w żagle?
-                        <ul>
-                            <li>Kiedy warto, a kiedy nie powinno się myśleć o projektach redukcji kosztów</li>
-                            <li>Gdzie szukać oszczędności - jak badać firmę</li>
-                            <li>Skąd czerpać informacje o potencjalnej skali redukcji</li>
-                            <li>Kiedy wdrożona strategia optymalizacji kosztów staje się barierą wzrostu</li>
-                        </ul>
-                    </li>
-                    <li>Bądź gotowy na zwrot na wiatr: jak narzędzia analityczne wspierają szybkie zmiany organizacyjne, optymalizacje i oszczędności
-                        <ul>
-                            <li>Miary efektywności procesów wewnętrznych - co i jak mierzyć</li>
-                            <li>Dlaczego warto budować dynamiczną zdolność analityczną</li>
-                            <li>O zastosowaniu i dostępności modeli predykcyjnych, narzędzi BI i innych w działaniach optymalizacyjnych - case study przedsiębiorstwa z branży finansowej oraz CUW</li>
-                        </ul>
-                    </li>
-                    <li>Cyfrowa zmiana reguł gry, czyli optymalizacje biznesowe po nowemu
-                        <ul>
-                            <li>Cyfrowe państwo, cyfrowe podatki. Czy to już koniec "klasycznej" optymalizacji podatkowej?</li>
-                            <li>Jakość i spójność danych, projektowanie procesów oraz rozproszona odpowiedzialność. Jak procesy biznesowe wpływają na zawartość Jednolitego Pliku Kontrolnego, poprzez który KAS przygląda się firmie?</li>
-                            <li>Nowa rola i nowy model współpracy z doradcą biznesowym. Co jest lepsze dla firmy korzystającej z doradców</li>
-                        </ul>
-                    </li>
-                </ol>
-            </div>
-            <div class="col-lg-4">
-                <h3 class="header-title header-title--content"><span>Osoby docelowe</span></h3>
-                <ul>
-                    <li>controllerzy</li>
-                    <li>dyrektorzy finansowi</li>
-                    <li>księgowi</li>
-                    <li>właściciele firm</li>
-                </ul>
-                <h3 class="header-title header-title--content"><span>Materiały do pobrania</span></h3>
-                <ul class="list list--file">
-                    <li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo FNC Warszawa.pdf</a></li>
-                    <li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo CENY POZ.pdf</a></li>
-                </ul>
-                <h3 class="header-title header-title--content"><span>Wykładowca / Trener</span></h3>
-                <p>Tomasz Targosz</p>
-                <p>Od 12 lat sprzedaje i szkoli handlowców. Uczył się technik sprzedaży od najlepszych, a dziś przekłada wiedzę na praktyczne warsztaty. Obala stare modele obsługi klientów i propaguje nowoczesny nurt sprzedażowy, oparty na poznaniu drugiej osoby poprzez obserwację, słuchanie i szczere zrozumienie. Współpracował m.in. z Ibis Hotel, Nordea Bank, Impel. Autor książek „Sprzedaż jest sexi” oraz „Martwa Sprzedaż”, cyklicznie pisuje do czasopism branżowych takich jak „Szef Sprzedaży”, „As Sprzedaży” i „Nowa Sprzedaż”.</p>
-            </div>
-            <div class="col-lg-12 contentbox-action contentbox-action--bottom">
-                <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
-                <ul class="list list--social">
-                    <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-                    <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-                    <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-                    <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-                    <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-                </ul>
+        <div class="container contentbox-main-hld">
+            <div class="row contentbox-main">
+                <div class="col-lg-9 contentbox-action contentbox-action--top">
+                    <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
+                    <ul class="list list--social">
+                        <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                        <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                        <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                        <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                        <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-8">
+                    <h3 class="header-title header-title--content"><span>Opis</span></h3>
+                    <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkan temacie zwiększania skuteczności służb controllingowych i ich wpływu na rentowność przedsiębiorstw.</p>
+                    <p><b>Podczas dwóch dni konferencyjnych, dkryją i poznają odpowiedzi na pytania:</b></p>
+                    <ul>
+                        <li>Kiedy strategia optymalizacji kosztów staje się barierą wzrostu?</li>
+                        <li>Jak identyfikować procesy bieżące do natychmiastowej optymalizacji?</li>
+                        <li>Jak optymalizować organizację czasu pracy i ograniczyć nadgodziny?</li>
+                        <li>Jak innym udało się utrzymać płynność i nie pogorszyć rentowności?</li>
+                        <li>Jak optymalizować podatki już na etapie projektowania procesów w firmach?</li>
+                        <li>Czy automatyzacja i robotyzacja to strategia dla każdego przedsiębiorstwa?</li>
+                    </ul>
+                    <h3 class="header-title header-title--content"><span>Zawartość</span></h3>
+                    <p><b>Dzień 1: Rentowność w ryzach,, czyli nawiguj w najlepszym kierunku</b></p>
+                    <ol>
+                        <li>Jak realizować projekty optymalizacji kosztowej, aby nabrać wiatru w żagle?
+                            <ul>
+                                <li>Kiedy warto, a kiedy nie powinno się myśleć o projektach redukcji kosztów</li>
+                                <li>Gdzie szukać oszczędności - jak badać firmę</li>
+                                <li>Skąd czerpać informacje o potencjalnej skali redukcji</li>
+                                <li>Kiedy wdrożona strategia optymalizacji kosztów staje się barierą wzrostu</li>
+                            </ul>
+                        </li>
+                        <li>Bądź gotowy na zwrot na wiatr: jak narzędzia analityczne wspierają szybkie zmiany organizacyjne, optymalizacje i oszczędności
+                            <ul>
+                                <li>Miary efektywności procesów wewnętrznych - co i jak mierzyć</li>
+                                <li>Dlaczego warto budować dynamiczną zdolność analityczną</li>
+                                <li>O zastosowaniu i dostępności modeli predykcyjnych, narzędzi BI i innych w działaniach optymalizacyjnych - case study przedsiębiorstwa z branży finansowej oraz CUW</li>
+                            </ul>
+                        </li>
+                        <li>Cyfrowa zmiana reguł gry, czyli optymalizacje biznesowe po nowemu
+                            <ul>
+                                <li>Cyfrowe państwo, cyfrowe podatki. Czy to już koniec "klasycznej" optymalizacji podatkowej?</li>
+                                <li>Jakość i spójność danych, projektowanie procesów oraz rozproszona odpowiedzialność. Jak procesy biznesowe wpływają na zawartość Jednolitego Pliku Kontrolnego, poprzez który KAS przygląda się firmie?</li>
+                                <li>Nowa rola i nowy model współpracy z doradcą biznesowym. Co jest lepsze dla firmy korzystającej z doradców</li>
+                            </ul>
+                        </li>
+                    </ol>
+                </div>
+                <div class="col-lg-4">
+                    <h3 class="header-title header-title--content"><span>Osoby docelowe</span></h3>
+                    <ul>
+                        <li>controllerzy</li>
+                        <li>dyrektorzy finansowi</li>
+                        <li>księgowi</li>
+                        <li>właściciele firm</li>
+                    </ul>
+                    <h3 class="header-title header-title--content"><span>Materiały do pobrania</span></h3>
+                    <ul class="list list--file">
+                        <li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo FNC Warszawa.pdf</a></li>
+                        <li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo CENY POZ.pdf</a></li>
+                    </ul>
+                    <h3 class="header-title header-title--content"><span>Wykładowca / Trener</span></h3>
+                    <p>Tomasz Targosz</p>
+                    <p>Od 12 lat sprzedaje i szkoli handlowców. Uczył się technik sprzedaży od najlepszych, a dziś przekłada wiedzę na praktyczne warsztaty. Obala stare modele obsługi klientów i propaguje nowoczesny nurt sprzedażowy, oparty na poznaniu drugiej osoby poprzez obserwację, słuchanie i szczere zrozumienie. Współpracował m.in. z Ibis Hotel, Nordea Bank, Impel. Autor książek „Sprzedaż jest sexi” oraz „Martwa Sprzedaż”, cyklicznie pisuje do czasopism branżowych takich jak „Szef Sprzedaży”, „As Sprzedaży” i „Nowa Sprzedaż”.</p>
+                </div>
+                <div class="col-lg-12 contentbox-action contentbox-action--bottom">
+                    <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
+                    <ul class="list list--social">
+                        <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                        <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                        <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                        <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                        <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
+    </article>
 </main>
 
 <footer class="footersite">
